@@ -121,10 +121,11 @@ class NOCC_Languages {
     function detectFromBrowser() {
         if (isset($_SERVER['HTTP_ACCEPT_LANGUAGE'])) { //if the "Accept-Language" header is set...
             $acceptedLanguages = $this->parseAcceptLanguageHeader($_SERVER['HTTP_ACCEPT_LANGUAGE']);
-            foreach ($acceptedLanguages as $langId => $langQuality) { //for all accepted languages...
-                if ($this->exists($langId)) { //if the language exists...
-                    $this->_selectedLangId = $langId;
-                    return $langId;
+            foreach ($acceptedLanguages as $fullLangId => $langQuality) { //for all accepted languages...
+                $langId = explode('-', $fullLangId); //Split language and country ID, if exist!
+                if ($this->exists($langId[0])) { //if the language exists...
+                    $this->_selectedLangId = $langId[0];
+                    return $langId[0];
                 }
             }
         }
